--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>Dragon Stack Hetfeju Sarkanyka #1</h1>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
     <div id="root"></div>
   </body>
 </html>
