--- a/backend/index.html
+++ b/backend/index.html
@@ -16,8 +16,8 @@
     <title>Sarkanyka</title>
   </head>
   <body>
-    <h1>Dragon Stack Hetfeju Sarkanyka #2</h1>
-    <script src="index.js"></script>
+    <h1>Dragon Stack Hetfeju Sarkanyka #1</h1>
+    <script src="./index.js"></script>
     <div id="root"></div>
   </body>
 </html>
